modified:   _data/navigation.yml 	new file:   _pages/category-archive.md 	new file:   _pages/search-archive.md 	new file:   _pages/tag-archive.md 	modified:   _posts/2023-02-26-first.md 	new file:   images/Me.jpg

--- a/_posts/2023-02-26-first.md
+++ b/_posts/2023-02-26-first.md
@@ -1,6 +1,11 @@
 ---
 layout: single
 title : "첫 번째 블로그 포스팅 입니다!!!"
+categories : 테스트
+tags : [블로그, 코딩, 지킬, 코드테스트]
+toc: true
+toc_sticky: true
+toc_label: 목차
 ---
 
 **[공지사항]** [지킬블로그 신규 업데이트 안내 드립니다.](https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/)
@@ -14,6 +19,12 @@ title : "첫 번째 블로그 포스팅 입니다!!!"
 
 
 ![teddynote]({{site.url}}/images/2021-05-10-first-posting/teddynote.png){: .img-width-half .align-center}
+
+![이미지추가](/images/Me.jpg){: .img-width-half .align-center}
+
+<!-- #![teddynote]({{site.url}}/images/여기에 이미지 주소 ){: .img-width-half .align-center} -->
+
+
 
 
 ## 특징
