--- a/_posts/2023-02-26-first.md
+++ b/_posts/2023-02-26-first.md
@@ -1,19 +1,16 @@
 ---
 layout: single
 title : "첫 번째 블로그 포스팅 입니다!!!"
-<<<<<<< HEAD
 categories : 테스트
 tags : [블로그, 코딩, 지킬, 코드테스트]
-=======
->>>>>>> 8d8751ca5012ede4b89b45252083b27fdbd8d312
 toc: true
 toc_sticky: true
 toc_label: 목차
 ---
 
-**[공지사항]** [지킬블로그 신규 업데이트 안내 드립니다.](https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/)
+**[공지사항]** [일 해야할 시간에 월루하고 블로그를 만들어봤다.]
 
-지킬 블로그에 대하여 알아보겠습니다.
+지킬 블로그다.
 
 
 ## 개요
@@ -21,9 +18,12 @@ toc_label: 목차
 설치형 블로그의 하나. `Ruby`를 기반으로 만들어져 있다.
 
 
-![teddynote]({{site.url}}/images/2021-05-10-first-posting/teddynote.png){: .img-width-half .align-center}
+<!-- ![teddynote]({{site.url}}/images/2021-05-10-first-posting/teddynote.png){: .img-width-half .align-center}-->
 
-![이미지추가](/images/Me.jpg){: .img-width-half .align-center}
+![이미지추가]({{site.url}}/images/Me.jpg){: .img-width-half .align-center}
+
+![이미지추가]({{site.url}}/images/Rabbit_Tiger.jpg){: .img-width-half .align-center}
+
 
 <!-- #![teddynote]({{site.url}}/images/여기에 이미지 주소 ){: .img-width-half .align-center} -->
 
